enable new HelpTooltip
add localize value equals